devops_dj/example1/deploy/brandsecure_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brandsecure-backend
  namespace: secureyourinbox
  labels:
    app: brandsecure-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brandsecure-backend
  template:
    metadata:
      labels:
        app: brandsecure-backend
    spec:
      imagePullSecrets:
      - name: dockerhub 
      containers:
      - name: brandsecure-backend
        image: secureyourinbox/brandsecure
        imagePullPolicy: Always
#        livenessProbe:
#          httpGet:
#            path: /
#            port: 8000
#        readinessProbe:
#          httpGet:
#            path: /
#            port: 8000
#          initialDelaySeconds: 10
#          timeoutSeconds: 5
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "1024Mi"
